added image path currently

--- a/personal.html
+++ b/personal.html
@@ -7,7 +7,7 @@
     <body>
         <h1> Profile Photo :</h1> 
 
-        <img src="developer.png" height="200px" width="200px"><br>&nbsp;&nbsp; Mohit Sharma<br>
+        <img src="assets/developer.png" height="200px" width="200px"><br>&nbsp;&nbsp; Mohit Sharma<br>
         <b>Mobile number: </b> 9900885066<br>
         <b>Email:</b> mohit.sharma@gmail.com <br>
         <b>Date of Birth: </b>Feb-19-2004 <br>
