--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         </nav>
     
          <br><br>
-         <iframe height="500px" width="900px" name="frame">
+         <!-- name="frame" means pages are open inside the iframe not in new tab and that ref is given in the href(target="frame")
+        src="home.html" means by default home page is open in iframe. -->
+         <iframe height="500px" width="900px" name="frame" src="home.html">
 
          </iframe>
          <br><br>
