commit home and personal details page
commit home and personal details page

--- a/home.html
+++ b/home.html
@@ -6,22 +6,29 @@
   </head>
 
   <body>
-    <h2>Professional Summary</h2>
+  
+    <h2>Professional Summery</h2>
 
-    <ul>
-      <li>Point 1</li>
+        <ul >
 
-      <li>Point 2</li>
+            <li>Having 1 years of experience in developing Single page Web Applications using Angular 8, HTML5,
 
-      <li>Point 3</li>
+                 CSS3, Bootstrap 5, JavaScript, TypeScript</li>
 
-      <li>Point 4</li>
+                 <li>Experience on working with version control system - GIT and GitHub</li>
 
-      <li>Point 5</li>
+                 <li> Experience working with JIRA for user stories and bug tracking</li>
 
-      <li>Point 6</li>
+                 <li>Strong Debugging & Troubleshooting code experience using Chrome Developer Tool</li>
 
-      <li>Point 7</li>
-    </ul>
+                 <li>Working exposure on ID's like VS Code and Notepad++</li>
+
+                 <li>Good working experience under Agile methodologies environment</li>
+
+                 <li>Knowledge of NodeJS</li>
+
+                 <li>Ability to work with people at all levels in the program</li>
+
+            </ul>
   </body>
 </html>
