Adding CSS Properties
Adding CSS Properties

--- a/basicsCss.html
+++ b/basicsCss.html
@@ -20,7 +20,7 @@ Here h2 is element
       #coding {
         background-color: beige;
               }
-                            /* color is change of "class=techstack" */
+                            /* color is change by using "class=techstack" */
 
       .techStack {
         color: cornflowerblue;
