--- a/home.html
+++ b/home.html
@@ -3,19 +3,40 @@
 <html>
   <head>
     <title>Home</title>
+
+    <!-- we use class selector -->
+    <style> 
+
+      .heading{
+          color:brown;
+          background-color: blueviolet;
+      }
+/* we use id selector */
+      #Ang{
+           color:rgba(234, 13, 146, 0.963)
+      }
+
+
+      .One{
+           color:rgb(28, 2, 63);
+           background-color: rgb(44, 150, 150);
+      }
+    </style>
   </head>
 
   <body>
   
-    <h2>Professional Summery</h2>
+    <h2 class="heading">Career Objectives</h2>
+    TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILL AND HELP ORGANIZATION GROWTH
+    <h2 class="heading">Professional Summery</h2>
 
         <ul >
 
-            <li>Having 1 years of experience in developing Single page Web Applications using Angular 8, HTML5,
+            <li>Having 1 years of experience in developing Single page Web Applications using <span id="Ang">Angular 8</span>, HTML5,
 
                  CSS3, Bootstrap 5, JavaScript, TypeScript</li>
 
-                 <li>Experience on working with version control system - GIT and GitHub</li>
+                 <li class="One">Experience on working with version control system - GIT and GitHub</li>
 
                  <li> Experience working with JIRA for user stories and bug tracking</li>
 
