--- a/inlineCss.html
+++ b/inlineCss.html
@@ -36,15 +36,12 @@
 
     <!-- Appliying Inline CSS -->
 
-    <p
-      style="
+    <p style="
         color: cadetblue;
         font-size: x-large;
         background-color: beige;
         word-spacing: 10px;
-        letter-spacing: 3px;
-      "
-    >
+        letter-spacing: 3px;" >
       Having 1 years of experience in developing Single page Web Applications
       using Angular 8, HTML5,CSS3, Bootstrap 5, JavaScript, TypeScript
     </p>
