--- a/personal.html
+++ b/personal.html
@@ -3,6 +3,10 @@
 <html>
     <head>
         <title> Personal Info</title>
+
+        <style>
+       
+        </style>
     </head>
     <body>
         <h1> Profile Photo :</h1> 
