--- a/contactus.html
+++ b/contactus.html
@@ -3,6 +3,17 @@
 <html>
     <head>
         <title> Contact us </title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+
+        <style>
+            *{
+                 font-family: 'Roboto Slab', serif;;
+            }
+        </style>
     </head>
     <body>
         <h1> Contact Us</h1>
